--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,12 @@
     ],
     "require": {
         "php": "^8.2",
+        "illuminate/contracts": "^10.0",
+        "spatie/enum": "^3.13",
+        "spatie/laravel-data": "^4.1",
         "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^10.0"
+        "spatie/laravel-query-builder": "^5.8",
+        "spatie/laravel-typescript-transformer": "^2.4"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
