--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/contracts": "^10.0",
+        "illuminate/contracts": "^10.0|^11.0",
         "spatie/enum": "^3.13",
         "spatie/laravel-data": "^4.1",
         "spatie/laravel-package-tools": "^1.14.0",
