--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
         "php": "^8.3",
         "illuminate/contracts": "^11.0",
         "spatie/enum": "^3.13",
-        "spatie/laravel-data": "^4.1",
+        "spatie/laravel-data": "^4.7",
         "spatie/laravel-package-tools": "^1.14.0",
-        "spatie/laravel-query-builder": "^5.8",
+        "spatie/laravel-query-builder": "^6.0",
         "spatie/laravel-typescript-transformer": "^2.4"
     },
     "require-dev": {
@@ -63,7 +63,7 @@
         ],
         "analyse": "vendor/bin/phpstan analyse",
         "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
+        "test-coverage": "XDEBUG_MODE=coverage vendor/bin/pest --coverage",
         "format": "vendor/bin/pint"
     },
     "config": {
